[gd_scene load_steps=11 format=3 uid="uid://b8v4h2mfnvwjj"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_fb8fp"]
[ext_resource type="Texture2D" uid="uid://dnnxo828q72cj" path="res://assets/DARVEMY.png" id="2_ghpfi"]
[ext_resource type="Texture2D" uid="uid://bu1e8gd7dbtwo" path="res://assets/music_icon.png" id="3_li41y"]
[ext_resource type="PackedScene" uid="uid://cuvcbv6x5y0o4" path="res://scenes/background_music.tscn" id="4_hfmlu"]

[sub_resource type="SystemFont" id="SystemFont_qcjre"]
font_names = PackedStringArray("Sectar")

[sub_resource type="SystemFont" id="SystemFont_d5rfq"]
font_names = PackedStringArray("Sectar")

[sub_resource type="Animation" id="Animation_yi031"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.381247, 0.566627, 0.922684, 1)]
}

[sub_resource type="Animation" id="Animation_ux6yj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ykn2"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.381247, 0.566627, 0.922684, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s55x6"]
_data = {
"RESET": SubResource("Animation_ux6yj"),
"fade_in": SubResource("Animation_yi031"),
"fade_out": SubResource("Animation_4ykn2")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fb8fp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.353299
anchor_top = 0.433642
anchor_right = 0.697917
anchor_bottom = 0.810185
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_qcjre")
theme_override_font_sizes/font_size = 45
text = "Play"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_qcjre")
theme_override_font_sizes/font_size = 45
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_qcjre")
theme_override_font_sizes/font_size = 45
text = "Salir"

[node name="Darvemy" type="Sprite2D" parent="."]
position = Vector2(592, 152)
scale = Vector2(0.210193, 0.210193)
texture = ExtResource("2_ghpfi")

[node name="Musica" type="Button" parent="."]
layout_mode = 2
offset_left = 1016.0
offset_top = 532.0
offset_right = 1088.0
offset_bottom = 604.0
tooltip_text = "MÃºsica"
theme_override_fonts/font = SubResource("SystemFont_d5rfq")
toggle_mode = true
action_mode = 0
icon = ExtResource("3_li41y")
flat = true

[node name="BackgroundMusic" parent="." instance=ExtResource("4_hfmlu")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.411765, 0.552941, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_s55x6")
}

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Musica" to="." method="_on_music_pressed"]
